[gd_scene load_steps=8 format=3 uid="uid://ryby62sdmkgt"]

[ext_resource type="Texture2D" uid="uid://cjps34wyoyujf" path="res://Assets/hoop.png" id="1_hybc7"]
[ext_resource type="Script" path="res://Scripts/Ring.gd" id="1_sas4b"]
[ext_resource type="Script" path="res://Scences/ring_indicator.gd" id="3_07uct"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lefqb"]
b = Vector2(0, -10000)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_owivs"]
b = Vector2(0, 10000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8l7c"]
size = Vector2(8, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4shaa"]
size = Vector2(30.3425, 7)

[node name="Ring" type="Node2D"]
scale = Vector2(6, 6)
script = ExtResource("1_sas4b")

[node name="Back" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-22.5, 0)
texture = ExtResource("1_hybc7")
region_enabled = true
region_rect = Rect2(60, 0, 45, 165)

[node name="Front" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(22.5, 0)
texture = ExtResource("1_hybc7")
region_enabled = true
region_rect = Rect2(105, 0, 45, 165)

[node name="UnderOver" type="Area2D" parent="."]

[node name="Under" type="CollisionShape2D" parent="UnderOver"]
position = Vector2(0, -80)
shape = SubResource("SegmentShape2D_lefqb")

[node name="Over" type="CollisionShape2D" parent="UnderOver"]
position = Vector2(0, 80)
shape = SubResource("SegmentShape2D_owivs")

[node name="Middle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle"]
shape = SubResource("RectangleShape2D_s8l7c")

[node name="RingCollidors" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="RingCollidors"]
position = Vector2(0, -75)
shape = SubResource("RectangleShape2D_4shaa")

[node name="Bottom" type="CollisionShape2D" parent="RingCollidors"]
position = Vector2(0, 75)
shape = SubResource("RectangleShape2D_4shaa")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RingIndicator" type="ColorRect" parent="CanvasLayer"]
offset_left = -233.0
offset_top = -25.0
offset_right = -173.0
offset_bottom = 13.0
color = Color(1, 0.25, 0.25, 1)
script = ExtResource("3_07uct")

[node name="RingDistance" type="Label" parent="CanvasLayer/RingIndicator"]
layout_mode = 0
offset_left = 11.5
offset_top = 6.5
offset_right = 51.5
offset_bottom = 29.5
text = "200"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="UnderOver" to="." method="_on_under_over_body_entered"]
[connection signal="body_entered" from="Middle" to="." method="_on_in_loop"]
